delete meduza shit. fix bug with gap around cards

--- a/src/components/main/avatar/styles.css
+++ b/src/components/main/avatar/styles.css
@@ -4,56 +4,23 @@
     box-shadow: 0 5px 10px 0 rgba(0,0,0,.2);
 }
 
-figure {
-    display: block;
-    overflow: hidden;
-    height: 350px;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 40px;
-    margin-inline-end: 40px;
+.card {
+    position: relative !important;
+    min-width: calc(300px + 3vw) !important;
+    max-width: calc(300px + 3vw)!important;
+    margin-top: 20px !important;
 }
 
-.PictureElement-root {
-    position: relative;
-    display: block;
-    margin: 0;
+
+.card-text { height: 42px; overflow-x: scroll; width: 100%; }
+
+.card-text p { width: 650px; word-break: break-word; }
+
+.card-img-top {
+    width: 100% !important;
+    height: calc(300px + 3vw) !important;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0 !important;
 }
 
-.PictureElement-rich {
-    border-radius: 20px 20px 0 0;
-    box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
-}
 
-.PictureElement-root picture {
-    position: relative;
-    display: block;
-    background-color: #ffffff;
-}
-
-.Title-root {
-    display: flex;
-    color: #b88b58;
-    line-height: 12px;
-    text-align: right;
-    cursor: default;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    vertical-align: middle;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-family: Proxima Nova,Arial,Helvetica Neue,sans-serif;
-    font-weight: 600;
-    font-size: 15px;
-}
-
-.BlockDescription-root {
-    text-align: left;
-    height: auto;
-    flex-grow: 1;
-    font-size: 15px;
-    font-family: Proxima Nova,Arial,Helvetica Neue,sans-serif;
-    font-weight: 700;
-}
