--- a/src/views/main/styles.css
+++ b/src/views/main/styles.css
@@ -31,3 +31,8 @@
     transform: rotate(360deg);
   }
 }
+
+.card-deck {
+  justify-content: center !important;
+
+}
